--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,7 @@ padding-top: 25px;
 
 .aboutMeOuter{
     background-color: #ffffff;
-    width: 968px;
+    width: 960px;
     height: 500px;
     margin-left: 200px;
     margin-top: 50px;
@@ -77,7 +77,6 @@ padding-top: 25px;
     /* background-color: green; */
     width: 20%;
     height: 15%;
-    float: left;    
     }
 
 .aboutMeText{
@@ -91,7 +90,6 @@ padding-top: 25px;
 
 .aboutMeBorder{
     border-bottom: 2px solid #dddddd;
-    width: 900px;
     margin-left: 33px;
     padding-top: 25px;
 }
@@ -108,7 +106,6 @@ padding-top: 25px;
 font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 color: #777777;
 border-top: 2px solid #dddddd;
-float: left;
 padding-top: 25px;
 margin-left: 33px;
 width: 900px;
@@ -118,7 +115,6 @@ line-height: 25px;
 .p2{
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #777777;
-    float: left;
     padding-top: 25px;
     margin-left: 33px;
     width: 900px;
@@ -127,29 +123,66 @@ line-height: 25px;
 
 .flexContainer{
     display: flex;
-    width: 900px;
     height: 1300px;
     background-color: #ffffff;
     margin-left: 200px;
     margin-top: 50px;
     border: 1px solid #dddddd;
+    justify-content: left;
+    flex-wrap: wrap;
     }
 
 
-.portfolioTextColor {
-          color: #ffffff;
-          background-color: #4aaaa5;
-          width: 20%;
-          text-align: center;
-          font-family: 'Georgia', Times, 'Times New Roman', serif;
-          padding-top: 25px;
-        }
+    .portfolioTextColor {
+        color: #ffffff;
+        background-color: #4aaaa5;
+        width: 200px;
+        height: 30px;
+        text-align: center;
+        font-family: 'Georgia', Times, 'Times New Roman', serif;
+        font-size: 30px;
+        position: absolute;
+        bottom: 10px;
+    }
 
-.portfolioImage{
-width: 200px;
-height: 150px;
-display: block;
-float: left;
-padding-right: 20px;
-object-fit: cover;
+    .portfolioImage {
+        width: 200px;
+        height: 150px;
+        display: block;
+        padding-right: 20px;
+        object-fit: cover;
+        /* position: absolute; */
+    }
+
+.portfolioImageContainer {
+    position: relative;
+    display: inline-block;
+    /* float: left; */
+}
+
+/* .portfolioImageContainer:nth-child(2) {
+    margin-right: 150px;
+} */
+
+/* .portfolioImageContainer:nth-last-child() {
+    float: left;
+    margin-right: 400px;
+} */
+
+.input1 {
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.formText {
+font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+color: #777777;
+opacity: 80%;
+font-size: 20px;
+margin-top: 5px;
+}
+
+.input2 {
+    width: 100%;
+    height: 200px;
 }
