--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,7 +140,7 @@ line-height: 25px;
         height: 30px;
         text-align: center;
         font-family: 'Georgia', Times, 'Times New Roman', serif;
-        font-size: 30px;
+        font-size: 20px;
         position: absolute;
         bottom: 10px;
     }
@@ -185,4 +185,28 @@ margin-top: 5px;
 .input2 {
     width: 100%;
     height: 200px;
+}
+
+.button {
+    font-size: 20px;
+    background-color: #4aaaa5;
+    color: white;
+    text-align: center;
+    width: 150px;
+    height: 40px;
+    margin-top: 10px;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #777777;
+    color: white;
+    text-align: center;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    /* border-top: #4aaaa5;
+    border-style: solid; */
 }
